hermes_fuzz_executed/fuzz_84_execution
'use strict';
let a = {};
a.foo = async function a() {
    let b = await Promise.resolve('done');
    return 1 + 2;
};
a.toString = function a() {
    return '';  
};
a;
let a = new Promise(function(resolve, reject) {
    setTimeout(function() {
        reject('done'); 
    }, 500);
});
a.toLowerCase;
a;
({
    then(success, fail) {
        setTimeout(fail, 500);
    },
    catch(fail) {
        setTimeout(success, 1000);
    }
});
 
let result = 'done';
let result = await Promise.resolve('done');


Execution Output ------------------:
test.js:28:20: error: ';' expected
let result = await Promise.resolve('done');
                   ^
